# FastAPI-shop

./: .gitignore  crud.py  items_view.py  main.py  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 2025_01_07_2244-f9d7c047209c_create_product_table.py  2025_01_07_2257-9a89714cb7d5_create_user_table.py  2025_01_07_2309-1cbaa7db36a7_create_new_posts_table.py  2025_01_08_0001-bf897490831a_create_new_profile_table.py  2025_01_09_0020-0e2a4a426cf4_create_orders_table.py  2025_01_09_0047-181aee3e4e5d_create_order_product_association_table.py  2025_01_17_2139-44feae3e215b_add_count_column_to_order_product_.py  2025_01_17_2232-405c9db4364e_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  helpers.py  utils.py
core/: config.py  pyproject.toml  requirements.txt
core/models/: __init__.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
